--- a/Cliente/pages/catalogoAnalisis.html
+++ b/Cliente/pages/catalogoAnalisis.html
@@ -8,6 +8,7 @@
     <title>Consulta de Catalogo</title>
     <link rel="stylesheet" href="../estilos/catalogoAnalisis.css">
     <link rel="stylesheet" href="../estilos/footer&header.css"/>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
@@ -21,31 +22,7 @@
     <main>
         <div class="container my-5">
             <h1 class="text-center mb-4">Solicita tus análisis aquí</h1>
-
-            <!-- Análisis de sangre -->
-            <section class="service-section ">
-                <h2 class="service-title">Análisis de Sangre</h2>
-                <p class="service-price">Precio: $500 MXN</p>
-                <div class="container-section">
-                    <img src="../Imagenes/imagenes_catalogo/analisis_sangre_400x222.png" alt="Análisis de Sangre"
-                        class="service-image">
-                    <section class="description-title">
-                        <h3>Descripcion</h3>
-                        <p>
-                            Realizamos análisis de sangre con alta precisión para obtener resultados confiables que
-                            apoyen
-                            en la
-                            detección temprana de diversas condiciones médicas. Nuestro equipo garantiza un manejo
-                            seguro y
-                            profesional.
-                        </p>
-                    </section>
-                </div>
-                <div class="service-buttons">
-                    <button class="btn btn-primary">Solicitar</button>
-                    <button class="btn btn-outline-info">Más Información</button>
-                </div>
-            </section>
+            <div id="divAnalisis"></div>
         </div>
     </main>
     <footer>
@@ -53,6 +30,8 @@
     </footer>
     <!-- Script para añadir footer y header -->
     <script src="../scripts/inicio.js"></script>
+    <script src="../scripts/catalogo.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
